2007-03-11  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.ac: Define GETTEXT_PACKAGE.

2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Use "yes" instead of $defaultval for the schemas option.

2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* schema/Makefile.am:
	List *.xml.in.in in EXTRA_DIST, so that make dist is also possible
	if an engine is disabled.

	Also removed the ChangeLog from the schema directory.

2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:

	Remove the "foo" color.

2007-03-04  Thomas Wood  <thos@gnome.org>

	Patch by: Werner Pantke <gnome-color-chooser@punk-ass-bitch.org>

	* .cvsignore:
	* schema/*:
	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* po/*:

	Patch from Werner Pantke to add xml descriptions of engine options.

2007-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Makefile.am:
	List subdirectories in DIST_SUBDIRS.

2007-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/crux/src/crux-draw.c: (draw_box):
	* engines/industrial/src/parse_rc_style.h:
	* engines/support/cairo-support.c:
	* test/Makefile.am:
	* test/torturetest.c:

	- Make gtk-engines compile with --enable-paranoia set.
	- Don't use the development cflags for the torture test. The string
	constants are too long and gcc complains.

	* engines/glide/src/glide_gtk2_support.c:

	Fixed some typos. A wrong variable was used in some comparisons and
	the result could never be true.

2007-02-26  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Update for 2.9.4 release

2007-02-26  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c: